--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,30 +35,31 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AiLaTrieuPhu
 endorsed.classpath=
 excludes=
-file.reference.flatlaf-3.2.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\flatlaf-3.2.jar
-file.reference.flatlaf-extras-3.2.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\flatlaf-extras-3.2.jar
-file.reference.flatlaf-fonts-roboto-2.137.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\flatlaf-fonts-roboto-2.137.jar
-file.reference.jaco-mp3-player-0.9.4.jar=C:\\Users\\chien\\Downloads\\Compressed\\jaco-mp3-player-0.9.4\\jaco-mp3-player-0.9.4\\lib\\jaco-mp3-player-0.9.4.jar
-file.reference.jsvg-1.0.0.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\jsvg-1.0.0.jar
-file.reference.miglayout-core.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\miglayout-core.jar
-file.reference.miglayout-swing.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\miglayout-swing.jar
-file.reference.raven-bean-pack-2.0.0.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\raven-bean-pack-2.0.0.jar
-file.reference.swing-crazy-panel-1.0.0.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\swing-crazy-panel-1.0.0.jar
-file.reference.TimingFramework-0.55.jar=C:\\Users\\chien\\OneDrive\\M\u00e1y t\u00ednh\\LIB\\TimingFramework-0.55.jar
+file.reference.AbsoluteLayout.jar=nbproject\\AbsoluteLayout.jar
+file.reference.flatlaf-3.2.jar=nbproject/flatlaf-3.2.jar
+file.reference.flatlaf-extras-3.2.jar=nbproject/flatlaf-extras-3.2.jar
+file.reference.flatlaf-fonts-roboto-2.137.jar=nbproject/flatlaf-fonts-roboto-2.137.jar
+file.reference.jaco-mp3-player-0.9.3.jar=nbproject/jaco-mp3-player-0.9.3.jar
+file.reference.jsvg-1.0.0.jar=nbproject/jsvg-1.0.0.jar
+file.reference.miglayout-core.jar=nbproject\\miglayout-core.jar
+file.reference.miglayout-swing.jar=nbproject/miglayout-swing.jar
+file.reference.raven-bean-pack-2.0.0.jar=nbproject/raven-bean-pack-2.0.0.jar
+file.reference.swing-crazy-panel-1.0.0.jar=nbproject/swing-crazy-panel-1.0.0.jar
+file.reference.TimingFramework-0.55.jar=nbproject/TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jaco-mp3-player-0.9.4.jar}:\
+    ${file.reference.jaco-mp3-player-0.9.3.jar}:\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.flatlaf-3.2.jar}:\
     ${file.reference.flatlaf-extras-3.2.jar}:\
     ${file.reference.flatlaf-fonts-roboto-2.137.jar}:\
     ${file.reference.jsvg-1.0.0.jar}:\
-    ${file.reference.miglayout-core.jar}:\
-    ${file.reference.miglayout-swing.jar}:\
     ${file.reference.raven-bean-pack-2.0.0.jar}:\
-    ${file.reference.swing-crazy-panel-1.0.0.jar}
+    ${file.reference.swing-crazy-panel-1.0.0.jar}:\
+    ${file.reference.miglayout-swing.jar}:\
+    ${file.reference.miglayout-core.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
