--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -36,13 +37,35 @@ dist.jlink.output=${dist.jlink.dir}/AiLaTrieuPhu
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=nbproject\\AbsoluteLayout.jar
+file.reference.antlr-2.7.7.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\antlr-2.7.7.jar
+file.reference.byte-buddy-1.6.14.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\byte-buddy-1.6.14.jar
+file.reference.classmate-1.3.0.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\classmate-1.3.0.jar
+file.reference.dom4j-1.6.1.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\dom4j-1.6.1.jar
 file.reference.flatlaf-3.2.jar=nbproject/flatlaf-3.2.jar
 file.reference.flatlaf-extras-3.2.jar=nbproject/flatlaf-extras-3.2.jar
 file.reference.flatlaf-fonts-roboto-2.137.jar=nbproject/flatlaf-fonts-roboto-2.137.jar
+file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\hibernate-commons-annotations-5.0.1.Final.jar
+file.reference.hibernate-core-5.2.12.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\hibernate-core-5.2.12.Final.jar
+file.reference.hibernate-entitymanager-5.2.12.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\hibernate-entitymanager-5.2.12.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.hibernate-search-engine-5.8.0.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\hibernate-search-engine-5.8.0.Final.jar
+file.reference.hibernate-search-orm-5.8.0.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\hibernate-search-orm-5.8.0.Final.jar
 file.reference.jaco-mp3-player-0.9.3.jar=nbproject/jaco-mp3-player-0.9.3.jar
+file.reference.jandex-2.0.3.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\jandex-2.0.3.Final.jar
+file.reference.jar_files.zip=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files.zip
+file.reference.javassist-3.20.0-GA.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\javassist-3.20.0-GA.jar
+file.reference.jboss-logging-3.3.0.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\jboss-logging-3.3.0.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar=C:\\Users\\LENOVO\\Documents\\Zalo Received Files\\jar_files\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
 file.reference.jsvg-1.0.0.jar=nbproject/jsvg-1.0.0.jar
 file.reference.miglayout-core.jar=nbproject\\miglayout-core.jar
 file.reference.miglayout-swing.jar=nbproject/miglayout-swing.jar
+file.reference.mssql-jdbc-12.4.1.jre11-javadoc.jar=..\\..\\..\\Documents\\Zalo Received Files\\AiLaTrieuPhu (1) (1)\\AiLaTrieuPhu\\nbproject\\mssql-jdbc-12.4.1.jre11-javadoc.jar
+file.reference.mssql-jdbc-12.4.1.jre11-sources.jar=..\\..\\..\\Documents\\Zalo Received Files\\AiLaTrieuPhu (1) (1)\\AiLaTrieuPhu\\nbproject\\mssql-jdbc-12.4.1.jre11-sources.jar
+file.reference.mssql-jdbc-12.4.1.jre11.jar=..\\..\\..\\Documents\\Zalo Received Files\\AiLaTrieuPhu (1) (1)\\AiLaTrieuPhu\\nbproject\\mssql-jdbc-12.4.1.jre11.jar
+file.reference.mssql-jdbc-12.4.1.jre8-javadoc.jar=..\\..\\..\\Documents\\Zalo Received Files\\AiLaTrieuPhu (1) (1)\\AiLaTrieuPhu\\nbproject\\mssql-jdbc-12.4.1.jre8-javadoc.jar
+file.reference.mssql-jdbc-12.4.1.jre8-sources.jar=..\\..\\..\\Documents\\Zalo Received Files\\AiLaTrieuPhu (1) (1)\\AiLaTrieuPhu\\nbproject\\mssql-jdbc-12.4.1.jre8-sources.jar
+file.reference.mssql-jdbc-12.4.1.jre8.jar=..\\..\\..\\Documents\\Zalo Received Files\\AiLaTrieuPhu (1) (1)\\AiLaTrieuPhu\\nbproject\\mssql-jdbc-12.4.1.jre8.jar
+file.reference.mysql-connector-j-8.1.0.jar=D:\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 file.reference.raven-bean-pack-2.0.0.jar=nbproject/raven-bean-pack-2.0.0.jar
 file.reference.swing-crazy-panel-1.0.0.jar=nbproject/swing-crazy-panel-1.0.0.jar
 file.reference.TimingFramework-0.55.jar=nbproject/TimingFramework-0.55.jar
@@ -59,7 +82,31 @@ javac.classpath=\
     ${file.reference.swing-crazy-panel-1.0.0.jar}:\
     ${file.reference.miglayout-swing.jar}:\
     ${file.reference.miglayout-core.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.hibernate-search-orm-5.8.0.Final.jar}:\
+    ${file.reference.hibernate-search-engine-5.8.0.Final.jar}:\
+    ${file.reference.jar_files.zip}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.byte-buddy-1.6.14.jar}:\
+    ${file.reference.classmate-1.3.0.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
+    ${file.reference.hibernate-core-5.2.12.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-5.2.12.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.jandex-2.0.3.Final.jar}:\
+    ${file.reference.javassist-3.20.0-GA.jar}:\
+    ${file.reference.jboss-logging-3.3.0.Final.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.mssql-jdbc-12.4.1.jre11-javadoc.jar}:\
+    ${file.reference.mssql-jdbc-12.4.1.jre11-sources.jar}:\
+    ${file.reference.mssql-jdbc-12.4.1.jre11.jar}:\
+    ${file.reference.mssql-jdbc-12.4.1.jre8-javadoc.jar}:\
+    ${file.reference.mssql-jdbc-12.4.1.jre8-sources.jar}:\
+    ${file.reference.mssql-jdbc-12.4.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,7 +114,8 @@ javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=20
 javac.target=20
 javac.test.classpath=\
@@ -95,7 +143,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AiLaTrieuPhu
-main.class=ailatrieuphu.Login
+main.class=GUI.Run.AiLaTrieuPhu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
